Version next

Version 2011.11.13.17
* Bump max version to 11.0a1
* Update locales for new strings.
* Updated translations for: nb-NO, nl

Version 2011.10.16.16b
* Fix content pop-up in Firefox 10.
* Add option to set the default side of the content pop-up.
* Fix-up licensing issues.
* Split up the overlay.xml so that proper license headers can be used.
* Added translations for: dsb-DE
* Updated translations for: hsb-DE, zh-TW

Version 2011.07.20.21
* Fix to prevent PluralForm utility from going AWOL.

Version 2011.07.20.20
* Prevent XPCOM interface (nsIDOMWindow) ID changes from breaking S4E.
* Fix bug when showing min download progress.
* Update locales for new strings.
* Updated translations for: da, he

Version 2011.07.13.20b
* Add option to show average/max/min download progress.
* Fix download progress margins.
* Fix download progress on text-only toolbars.
* Update locales for new strings.
* Updated translations for: bg-BG, el, es-ES, it-IT, ja-JP, nb-NO, pl, ro, ru

Version 2011.07.03.16b
* Integrate with Firefox's URL trimming.
* Separate built-in preferences into their own block.
* Add a progress line to the download button.
* Update locales for new strings.

Version 2011.06.28.22
* Hide preferences that aren't supported by a particular version of Firefox.

Version 2011.06.22.19b
* Firefox 7.0a1 changed the nsIDOMWindow interface ID. Make S4E compatible.
* Fix progress bar when opening a link in a new window.
* Update locales for new strings.
* Updated translations for: cs, da, es-ES, he, hsb-DE, hu, it-IT, nb-NO, ro, sr, sv-SE

Version 2011.06.13.19b
* Tweak some preference UI strings.
* Rewrite the CSS background editor using XBL.
* Add background-repeat support to the simple editor.
* Add background-position support to the simple editor.
* Add preview progress bar to the editor.
* Add a preference to control Firefox's domain highlighting in the location bar.
* Add a preference to control statusbar-display mirroring on mouse-over.