@@ -13,7 +13,7 @@
    - for the specific language governing rights and limitations under the
    - License.
    - 
-   - The Original Code is this file as it was released on March 28, 2001.
+   - The Original Code is Mozilla Firefox.
    - 
    - The Initial Developer of the Original Code is
    - David Hyatt.
