@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--  ***** BEGIN LICENSE BLOCK *****
+<!-- ***** BEGIN LICENSE BLOCK *****
    - Version: MPL 1.1/GPL 2.0/LGPL 2.1
    - 
    - The contents of this file are subject to the Mozilla Public License Version
@@ -13,7 +13,7 @@
    - for the specific language governing rights and limitations under the
    - License.
    - 
-   - The Original Code is mozilla.org browser.
+   - The Original Code is Mozilla Firefox.
    - 
    - The Initial Developer of the Original Code is
    - Simon Bünzli <zeniko@gmail.com>
