@@ -115,7 +115,7 @@ splitter.status4evar-status-splitter
 }
 
 /*
- * Stop being a derp!
+ * Add-on bar
  */
 
 #browser-bottombox[s4eboarder="true"] #addon-bar
