@@ -1,4 +1,5 @@
 Version next
+* Integrate Firefox 11+ Status Bar styling when customizing the toolbar.
 
 Version 2011.11.13.17
 * Bump max version to 11.0a1
